# lms

./: .coveragerc  .dockerignore  .env_example  .flake8  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
fixtures/: courses_fixture.json  custom_user_fixture.json  lessons_fixture.json  payment_fixture.json
html/: index.html
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_e7c45762ecaa8ffb_admin_py.html  z_e7c45762ecaa8ffb_apps_py.html  z_e7c45762ecaa8ffb_models_py.html  z_e7c45762ecaa8ffb_paginators_py.html  z_e7c45762ecaa8ffb_permissions_py.html  z_e7c45762ecaa8ffb_serializers_py.html  z_e7c45762ecaa8ffb_tests_py.html  z_e7c45762ecaa8ffb_urls_py.html  z_e7c45762ecaa8ffb_validators_py.html  z_e7c45762ecaa8ffb_views_py.html  z_f6c68bdc9becfc1e_admin_py.html  z_f6c68bdc9becfc1e_apps_py.html  z_f6c68bdc9becfc1e_forms_py.html  z_f6c68bdc9becfc1e_models_py.html  z_f6c68bdc9becfc1e_serializers_py.html  z_f6c68bdc9becfc1e_tests_py.html  z_f6c68bdc9becfc1e_urls_py.html  z_f6c68bdc9becfc1e_views_py.html
lms/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_description_alter_lesson_image.py  0003_course_owner_lesson_owner_alter_lesson_course.py  0004_alter_lesson_course.py  0004_coursesubscription.py  (+2 more)
nginx/: nginx.conf
users/: admin.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
(+6 files in other folders)
